syntax = "proto3";
package dydxprotocol.clob;

import "gogoproto/gogo.proto";
import "dydxprotocol/clob/order.proto";

option go_package = "github.com/dydxprotocol/v4/x/clob/types";

// ProcessProposerMatchesEvents is used for communicating which events occurred
// in the last block that require updating the state of the memclob in the
// Commit blocker. It contains information about the following state updates:
// - Stateful orders that were placed in the last block.
// - Stateful order IDs that were expired in the last block.
// - Order IDs that were filled in the last block.
// - Stateful cancellations that were placed in the last block.
// - Stateful order removals in the last block.
// - Conditional order ids triggered in the last block.
// - The height of the block in which the events occurred.
message ProcessProposerMatchesEvents {
  repeated dydxprotocol.clob.Order placed_stateful_orders = 1
      [ (gogoproto.nullable) = false ];
  repeated dydxprotocol.clob.OrderId expired_stateful_order_ids = 2
      [ (gogoproto.nullable) = false ];
  repeated dydxprotocol.clob.OrderId orders_ids_filled_in_last_block = 3
      [ (gogoproto.nullable) = false ];
  repeated dydxprotocol.clob.OrderId placed_stateful_cancellations = 4
      [ (gogoproto.nullable) = false ];
  repeated dydxprotocol.clob.OrderId removed_stateful_order_ids = 5
      [ (gogoproto.nullable) = false ];
  repeated dydxprotocol.clob.OrderId
      conditional_order_ids_triggered_in_last_block = 6
      [ (gogoproto.nullable) = false ];
  uint32 block_height = 7;
}
